--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "scripts": {
         "dev": "vuepress dev"
     },
+    "resolutions": {
+        "webpack-dev-middleware": "3.6.0"
+    },
     "dependencies": {
         "vuepress": "^0.14.11",
-        "webpack-dev-middleware": "^3.6.2",
+        "webpack-dev-middleware": "3.6.0",
         "webpack-dev-server": "^3.3.1"
+    },
+    "devDependencies": {
+        "vuepress": "^0.14.11"
     }
 }
